# tennis-predictor

./: .gitignore  CLAUDE.md  DATA_SOURCES_CATALOG.md  DESIGN_SYSTEM.md  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml  predict.yml  weekly-retrain.yml
config/: hyperparams.yaml
docs/superpowers/plans/: 2026-03-24-ui-redesign.md
docs/superpowers/specs/: 2026-03-24-ui-redesign-design.md
scripts/: daily_update.py
site/: index.html  predictions.json  sw.js
site/assets/css/: style.css
site/assets/js/: app.js
src/tennis_predictor/: __init__.py  cli.py  config.py  hyperparams.py  pipeline.py  predict_live.py
src/tennis_predictor/data/: __init__.py  charting.py  court_speed.py  line_movements.py  news.py  odds.py  odds_merge.py  rankings.py  sackmann.py  schedule.py  sentiment.py  tml.py  weather.py
src/tennis_predictor/evaluation/: __init__.py  metrics.py
src/tennis_predictor/features/: advanced.py  selection.py
src/tennis_predictor/models/: __init__.py  baseline.py  ensemble.py  gbm.py  gnn.py  point_sim.py  selective.py  tuning.py
src/tennis_predictor/online/: __init__.py  learner.py
src/tennis_predictor/temporal/: __init__.py  guard.py  validation.py
src/tennis_predictor/web/: __init__.py  generate.py
tests/: test_data.py  test_evaluation.py  test_features.py  test_models.py  test_temporal_guard.py
