[project]
name = "tennis-predictor"
version = "0.1.0"
description = "State-of-the-art ATP tennis match prediction system with self-learning capabilities"
requires-python = ">=3.11"
dependencies = [
    # Core data
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",

    # ML / Gradient Boosting
    "scikit-learn>=1.4",
    "xgboost>=2.1",
    "lightgbm>=4.3",
    "catboost>=1.2",

    # Bayesian / Rating Systems
    "scipy>=1.12",

    # Data Sources
    "requests>=2.31",
    "feedparser>=6.0",
    "praw>=7.7",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",

    # Visualization
    "plotly>=5.18",

    # Optimization
    "optuna>=4.0",

    # Utilities
    "tqdm>=4.66",
    "joblib>=1.3",
    "click>=8.1",
    "pyyaml>=6.0",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]
ml-advanced = [
    "torch>=2.2",
    "torch-geometric>=2.5",
]

[project.scripts]
tennis-predict = "tennis_predictor.cli:main"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
